[tool.poetry]
name = "flow-launcher-plugin-reposearch"
version = "0.1.0"
description = ""
authors = ["masterivanic <masterivanic@gmail.com>"]
readme = "README.md"
packages = [{include = "flow"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
